sanger/sites/fetal-lung/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fetal-lung
  labels:
    app: fetal-lung
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
  selector:
    app: fetal-lung
---
apiVersion: v1
kind: Service
metadata:
  name: fetal-lung-main
  labels:
    app: fetal-lung-main
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: fetal-lung-main
---
apiVersion: v1
kind: Service
metadata:
  name: fetal-lung-rbc
  labels:
    app: fetal-lung-rbc
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: fetal-lung-rbc
---
apiVersion: v1
kind: Service
metadata:
  name: fetal-lung-endo
  labels:
    app: fetal-lung-endo
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: fetal-lung-endo
---
apiVersion: v1
kind: Service
metadata:
  name: fetal-lung-epi
  labels:
    app: fetal-lung-epi
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: fetal-lung-epi
---
apiVersion: v1
kind: Service
metadata:
  name: fetal-lung-fsm
  labels:
    app: fetal-lung-fsm
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: fetal-lung-fsm
---
apiVersion: v1
kind: Service
metadata:
  name: fetal-lung-imm
  labels:
    app: fetal-lung-imm
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: fetal-lung-imm
---
apiVersion: v1
kind: Service
metadata:
  name: fetal-lung-cluster0
  labels:
    app: fetal-lung-cluster0
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: fetal-lung-cluster0
---
apiVersion: v1
kind: Service
metadata:
  name: fetal-lung-cluster1
  labels:
    app: fetal-lung-cluster1
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: fetal-lung-cluster1
---
apiVersion: v1
kind: Service
metadata:
  name: fetal-lung-cluster2
  labels:
    app: fetal-lung-cluster2
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: fetal-lung-cluster2
---
apiVersion: v1
kind: Service
metadata:
  name: fetal-lung-cluster3
  labels:
    app: fetal-lung-cluster3
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: fetal-lung-cluster3
---
