sanger/sites/fetal-lung/ingress.yaml
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: fetal-lung
spec:
  virtualhost:
    fqdn: fetal-lung.cellgeni.sanger.ac.uk
  routes:
    - match: /
      services:
        - name: fetal-lung
          port: 80
    - match: /static
      services:
        - name: fetal-lung-main
          port: 80
    - match: /main
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-main
          port: 80
    - match: /rbc
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-rbc
          port: 80
    - match: /endo
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-endo
          port: 80
    - match: /epi
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-epi
          port: 80
    - match: /fsm
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-fsm
          port: 80
    - match: /imm
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-imm
          port: 80
    - match: /cluster0
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-cluster0
          port: 80
    - match: /cluster1
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-cluster1
          port: 80
    - match: /cluster0_2
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-cluster0-201119
          port: 80
    - match: /cluster1_2
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-cluster1-201119
          port: 80
    - match: /cluster0f_2
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-cluster0f-201119
          port: 80
    - match: /cluster1f_2
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-cluster1f-201119
          port: 80
    - match: /cluster2
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-cluster2
          port: 80
    - match: /cluster3
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-cluster3
          port: 80
    - match: /cluster4
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-cluster4
          port: 80
    - match: /cluster5
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-cluster5
          port: 80
    - match: /cluster6
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-cluster6
          port: 80
    - match: /cluster7
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-cluster7
          port: 80
    - match: /cluster8
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-cluster8
          port: 80
    - match: /10domains
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-10domains
          port: 80

    - match: /201119C0filtered
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-201119c0filtered
          port: 80

    - match: /201119C0
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-201119c0
          port: 80

    - match: /201119C1filtered
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-201119c1filtered
          port: 80

    - match: /201119C1
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-201119c1
          port: 80

    - match: /201120C2filtered
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-201120c2filtered
          port: 80

    - match: /201120C2
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-201120c2
          port: 80

    - match: /201121C3filtered
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-201121c3filtered
          port: 80

    - match: /201121C3
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-201121c3
          port: 80

    - match: /201122C4filtered
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-201122c4filtered
          port: 80

    - match: /201122C4
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-201122c4
          port: 80

    - match: /201123C5filtered
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-201123c5filtered
          port: 80

    - match: /201123C5
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-201123c5
          port: 80

    - match: /201123C6filtered
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-201123c6filtered
          port: 80

    - match: /201123C6
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-201123c6
          port: 80

    - match: /201124C7filtered
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-201124c7filtered
          port: 80

    - match: /201124C7
      prefixRewrite: "/" 
      services:
        - name: fetal-lung-201124c7
          port: 80
---
